# FastAPI-Game-Library

./: Docker-Compose.yaml  README.md  init.sql  pyproject.toml  requirements.txt  yaak.fastapi-game-library.json
app/: database.py  main.py  models.py  schemas.py
app/routers/: games.py  publishers.py
