[project]
name = "fastapi-game-library"
version = "0.1.0"
description = "A slightly more complex implementation of FastAPI, using postgres as a backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.39",
]